@@ -1,131 +1,127 @@
 package de.petropia.farmworld;
 
 import de.petropia.turtleServer.api.worlds.WorldManager;
-import de.petropia.turtleServer.server.TurtleServer;
 import org.bukkit.Bukkit;
-import org.bukkit.Location;
+import org.bukkit.GameRule;
 import org.bukkit.World;
+import org.bukkit.WorldBorder;
 
-import java.io.BufferedReader;
 import java.io.File;
-import java.io.FileReader;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.text.SimpleDateFormat;
 import java.time.DayOfWeek;
 import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.time.temporal.TemporalAdjusters;
-import java.util.Date;
+import java.util.Collections;
 
 public class FarmworldManager {
 
     private static final String WORLD_DATA_FILE = "FarmFile";
+    private static final String WORLD_NAME = "world";
+    private static final String NETHER_NAME = "world_nether";
+    private static final int BLOCKS_TO_GENERATE = Farmworld.getInstance().getConfig().getInt("BlockToGenerate");
 
-    public void checkFarmworlds(){
-        Farmworld.getInstance().getLogger().info("Checking world: world");
-        checkWorld("world", true);
-        Farmworld.getInstance().getLogger().info("Checking world: world_nether");
-        checkWorld("world_nether", false);
+    /**
+     * Checks for all worlds if they are too old and deletes them if neccessary. Also, it pregenerates all worlds and set world boarders.
+     */
+    public void checkWorld(){
+        File worldFolder = Bukkit.getWorldContainer();
+        File farmFile = new File(worldFolder, WORLD_NAME + File.separator + WORLD_DATA_FILE);
+        if (farmFile.exists()) {
+            try {
+                String line = Files.readAllLines(farmFile.toPath()).get(0);
+                long parsedLongTimestamp = Long.parseLong(line);
+                Instant deleteTimestamp = Instant.ofEpochSecond(parsedLongTimestamp);
+                if (Instant.now().isAfter(deleteTimestamp)) {
+                    deleteRecursive(new File(worldFolder, WORLD_NAME));
+                    deleteRecursive(new File(worldFolder, NETHER_NAME));
+                    recreateVanillaDirectories(NETHER_NAME);
+                    recreateVanillaDirectories(WORLD_NAME);
+                    createNewFarmFile(farmFile);
+                    pregenWorld();
+                    Bukkit.getLogger().info("Farmworld is expired and was deleted");
+                    Farmworld.setAvailable(false);
+                } else {
+                    Farmworld.getInstance().getLogger().info("Farmworld is not expired.");
+                    Farmworld.setAvailable(true);
+                    Farmworld.setNextDelete(deleteTimestamp);
+                }
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        } else {
+            createNewFarmFile(farmFile);
+            pregenWorld();
+        }
         setWorldBorders();
+        applyGamerules(WORLD_NAME);
+        applyGamerules(NETHER_NAME);
+    }
+
+    private void applyGamerules(String worldname) {
+        Bukkit.getScheduler().runTask(Farmworld.getInstance(), () -> {
+            World world = Bukkit.getWorld(worldname);
+            world.setGameRule(GameRule.ANNOUNCE_ADVANCEMENTS, false);
+            world.setGameRule(GameRule.DO_FIRE_TICK, false);
+            world.setGameRule(GameRule.MAX_ENTITY_CRAMMING, 12);
+            world.setGameRule(GameRule.SHOW_DEATH_MESSAGES, false);
+        });
     }
 
     private void setWorldBorders(){
-        int distance = Farmworld.getInstance().getConfig().getInt("BlockToGenerate");
-        World world = Bukkit.getWorld("world");
-        world.getWorldBorder().setCenter(new Location(world, 0, 0, 0));
-        world.getWorldBorder().setWarningDistance(30);
-        world.getWorldBorder().setSize(distance - 50);
-        World nether = Bukkit.getWorld("world_nether");
-        nether.getWorldBorder().setCenter(new Location(nether, 0, 0, 0));
-        nether.getWorldBorder().setWarningDistance(30);
-        nether.getWorldBorder().setSize(distance - 50);
+        Bukkit.getScheduler().runTaskLater(Farmworld.getInstance(), () -> {
+            World world = Bukkit.getWorld(WORLD_NAME);
+            WorldBorder worldBorder = world.getWorldBorder();
+            worldBorder.setSize(BLOCKS_TO_GENERATE * 2);
+            World nether = Bukkit.getWorld(NETHER_NAME);
+            WorldBorder netherBorder = nether.getWorldBorder();
+            netherBorder.setSize(BLOCKS_TO_GENERATE * 2);
+        }, 2);
     }
 
-    private void checkWorld(String name, boolean mainWorld){
-        File worldcontainer = Bukkit.getServer().getWorldContainer();
-        File worlddata;
-        try {
-            if(new File(worldcontainer, name).exists()){
-                Farmworld.getInstance().getLogger().info("Found world directory for " + name);
-                File worldDir = new File(worldcontainer, name);
-                worlddata = new File(worldDir, WORLD_DATA_FILE);
-                if(!worlddata.exists()){
-                    Farmworld.getInstance().getLogger().info("Worlddata file does not exist for existing world '" + name+ "'! Creating new!");
-                    generateNewWorldDataFile(worlddata);
-                    return;
-                }
-                Farmworld.getInstance().getLogger().info("Worlddata file found! Reading...");
-                BufferedReader reader = new BufferedReader(new FileReader(worlddata));
-                long timeStamp = Long.parseLong(reader.readLine());
-                reader.close();
-                if(timeStamp <= Instant.now().getEpochSecond()){ //World is too old
-                    Farmworld.getInstance().getLogger().info("World to old! Deleting and schedule new delete");
-                    delete(worldDir);
-                    Bukkit.getScheduler().runTask(Farmworld.getInstance(), () -> {
-                        if(mainWorld) {
-                            Farmworld.setAvailable(false);
-                        }
-                        generateNewWorldDataFile(worlddata);
-                        Farmworld.getInstance().getLogger().info("Starting world pregen for " + name);
-                        WorldManager.generate(Bukkit.getWorld(name), Farmworld.getInstance().getConfig().getInt("BlockToGenerate"), false).thenAccept(bool -> {
-                            if(bool) Farmworld.getInstance().getLogger().warning("Pregen for " + name + " failed!");
-                            Farmworld.getInstance().getLogger().info("Pregen done for" + name);
-                            if(mainWorld) {
-                                Farmworld.setAvailable(true);
-                            }
-                        });
-                    });
-                } else {
-                    if(!mainWorld){
-                        return;
-                    }
-                    Farmworld.getInstance().getLogger().info("Schedule server restart in " + timeStamp + "s");
-                    Bukkit.getScheduler().runTaskLater(Farmworld.getInstance(), () -> TurtleServer.getInstance().shutdownServer(), (timeStamp - Instant.now().getEpochSecond()) * 20);
-                    Farmworld.setNextDelete(Instant.ofEpochSecond(timeStamp));
-                }
-                return;
+    private void pregenWorld() {
+        Farmworld.getInstance().getLogger().info("Starting pregeneration!");
+        Farmworld.setAvailable(false);
+        Bukkit.getScheduler().runTaskLater(Farmworld.getInstance(), () -> WorldManager.generate(Bukkit.getWorld(WORLD_NAME), BLOCKS_TO_GENERATE, false).thenAccept(success -> {
+            if(!success){
+                Farmworld.getInstance().getLogger().info("Failed to generate world");
+            } else {
+                Farmworld.getInstance().getLogger().info("Successfully generated world");
             }
-            Farmworld.getInstance().getLogger().info("World " + name + " is not contained in world container. Assuming creation later and schedule creation of new worlddata file");
-            File worldDir = new File(worldcontainer, name);
-            worlddata = new File(worldDir,WORLD_DATA_FILE);
-            generateNewWorldDataFile(worlddata);
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-    }
-
-    void delete(File f) {
-        if (f.isDirectory()) {
-            for (File c : f.listFiles())
-                delete(c);
-        }
-    }
-
-    /**
-     * Create a new world data file in world directory as soon as the world is generated and sets a new date to delete
-     * @param worlddata Worldata as file
-     */
-    private void generateNewWorldDataFile(File worlddata){
-        Farmworld.getInstance().getLogger().info("Creating new worddata file");
-        if(!worlddata.exists()){
-            try {
-                worlddata.createNewFile();
-            } catch (IOException e) {
-                throw new RuntimeException(e);
+            Farmworld.setAvailable(true);
+        }), 20);
+        Bukkit.getScheduler().runTaskLater(Farmworld.getInstance(), () -> WorldManager.generate(Bukkit.getWorld(WORLD_NAME), BLOCKS_TO_GENERATE, false).thenAccept(success -> {
+            if(!success){
+                Farmworld.getInstance().getLogger().info("Failed to generate nether");
+            } else {
+                Farmworld.getInstance().getLogger().info("Successfully generated nether");
             }
-        }
-        Instant nextDelete = getNextDelete();
-        Farmworld.setNextDelete(nextDelete);
+        }), 20*20);
+
+    }
+
+    private void createNewFarmFile(File file){
         Bukkit.getScheduler().runTask(Farmworld.getInstance(), () -> {
             try {
-                Files.writeString(worlddata.toPath(), String.valueOf(nextDelete.getEpochSecond()));
+                Instant nextDeleteTimestamp = getNextDelete();
+                Files.write(file.toPath(), Collections.singletonList(String.valueOf(nextDeleteTimestamp.getEpochSecond())));
+                Farmworld.setNextDelete(nextDeleteTimestamp);
             } catch (IOException e) {
-                throw new RuntimeException(e);
+                e.printStackTrace();
             }
         });
-        Farmworld.getInstance().getLogger().info("Success! Next delete on " + new SimpleDateFormat("dd.MM.yyyy HH:mm").format(Date.from(nextDelete)));
+    }
+
+    private void recreateVanillaDirectories(String worldName){
+        Bukkit.getScheduler().runTask(Farmworld.getInstance(), () -> {
+           File worldContainer = Bukkit.getWorldContainer();
+           File playerData = new File(worldContainer, worldName + File.separator + "playerdata");
+           if(!playerData.mkdirs()){
+               Farmworld.getInstance().getLogger().info("Failed to recreate playerdata directory");
+           }
+        });
     }
 
     private Instant getNextDelete(){
@@ -141,6 +137,30 @@ public class FarmworldManager {
         nextDayDateTime = nextDayDateTime.withHour(15).withMinute(0).withSecond(0).withNano(0);
         // Convert LocalDateTime back to Instant in the Germany time zone
         return nextDayDateTime.atZone(ZoneId.of("Europe/Berlin")).toInstant();
+    }
+
+    /**
+     * Delete all content in a directory and the directory itself
+     *
+     * @param directory The directory to delete
+     */
+    private void deleteRecursive(File directory) {
+        if (directory == null || !directory.exists()) {
+            return;
+        }
+        File[] files = directory.listFiles();
+        if (files == null) {  //Can be null when dir is empty or IO error
+            directory.delete();
+            return;
+        }
+        for (File file : files) {
+            if (file.isDirectory()) {
+                deleteRecursive(file);  //delete subdir recursive
+            } else {
+                file.delete();
+            }
+        }
+        directory.delete(); //delete root dir -> now it is empty
     }
 
 }
